@@ -5,6 +5,7 @@ Feel free to request any roadmap change if you have any suggestion.
 Bug: Check if the dxcluster configuration to show or not confirmed/worked works properly
 
 KLog 0.9.1
+BUG: Cuidado que cuenta 41 zonas!!
 TODO: when File New:
     Clean the DB & query.exec("VACUUM");
 TODO: When Saving As, KLog should offer the default filename.
@@ -18,9 +19,8 @@ TODO: Make the Tool->Needed, QSL sent but pending to receive
 TODO: Make a tool to mark and export QSO from the right button. (i.e. To mark several QSOto print and export the ADIF file with just those QSO)
 TODO: Update the database with the Entities data when updating the CTY.CSV file!
 TODO: Add the awards functionality (to manage awa files, TPEA, WAS, ...)
-TODO: Pass the version to the filemanager to be able to export the correct version in the ADIF file.
-TODO: DXCLuster QLineEdit input should be disabled when not connected.
 TODO: Check the DX-Cluster filters. Maybe the show confirmed is not working.
+TODO: Add in the log & serch a toolTip that shows the DXCC (or another useful info) on pointed the QRZ.
 
 KLog 0.9.2
 TODO: Add Satellite support (maybe another Tab) (look this file (below) for details.
